--- a/api/.env.example
+++ b/api/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-
+FRONTEND_URL=http://localhost
+CODE_COLLECT_URL=http://localhost/%s
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
