--- a/front/package.json
+++ b/front/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^4.1",
+    "@mantine/core": "^4.2",
     "@mantine/form": "^4.2",
-    "@mantine/hooks": "^4.1",
+    "@mantine/hooks": "^4.2",
     "@testing-library/jest-dom": "^5.16",
     "@testing-library/react": "^13.3",
     "@testing-library/user-event": "^13.5",
@@ -19,6 +19,7 @@
     "react-dom": "^18.2",
     "react-i18next": "^11.18.0",
     "react-scripts": "^5.0",
+    "react-router-dom": "^6.3.0",
     "tabler-icons-react": "^1.43",
     "typescript": "^4.7",
     "web-vitals": "^2.1"
