Edit user; More admin stats;

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -3,8 +3,8 @@
 /public/storage
 /storage/*.key
 /vendor
-.env.local
 .env
+.env.prod
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
